# is-record-plugin

./: README.md  cabal.project
is-record-plugin/: IsRecord.hs  Plugin.hs  is-record-plugin.cabal
test/: Test.hs  test.cabal
