cabal-version:       2.0.0
name:                test
version:             0.1.0.0
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: Test
  build-depends:       base >=4.12 && <4.13, is-record-plugin
  default-language:    Haskell2010
